doc(formatter): update + give solution for encountered issue with recommended IntelliJ IDEA plugin